改变了描述文字

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-2  text-center text">喜欢的品牌</div>
+                <div class="col-2  text-center text">喜欢的品牌（品牌偏好）</div>
                 <div class="col">
                     <input type="text" name="keyword1" id="keyword1" class="form-control">
                 </div>
