增加了品类：相机

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         <option value="手机">手机</option>
                         <option value="笔记本电脑">笔记本电脑</option>
                         <option value="耳机">耳机</option>
+                        <option value="耳机">相机</option>
                     </select>
                 </div>
             </div>
